changed tab names to match pages

--- a/templates/pancakes/home.html
+++ b/templates/pancakes/home.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title> Byte Buffet: Pancakes </title>
   <style>
     body {
       background-color: #8CC0DE;
@@ -34,10 +35,6 @@
     .highscores {
       float: right;
       margin-right: 20px;
-    }
-    .gone {
-      background-color: #8CC0DE;
-      border: 0px
     }
   </style>
 </head>
