--- a/templates/cheese/home.html
+++ b/templates/cheese/home.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title> Byte Buffet: Grilled Cheese </title>
   <style>
     body {
       background-color: #8CC0DE;
@@ -35,10 +36,6 @@
       float: right;
       margin-right: 20px;
     }
-    .gone {
-      background-color: #8CC0DE;
-      border: 0px
-    }
   </style>
 </head>
 
@@ -71,15 +68,15 @@
     </table>
   </div>
 
- <h2 align="center">Grilled Cheese Sandwich</h2>
-  <table align= "center">
+  <h3>Grilled Cheese Sandwich</h3>
+  <table>
     <tr>
       <td><strong>Ingredients</strong></td>
       <td><strong>Instructions</strong></td>
     </tr>
     <tr>
       <td>- tbsp butter, softened</td>
-      <td>1. Put cheese slices on one slice of bread then put the other slice on top</td>
+      <td>Put cheese slices on one slice of bread then put the other slice on top</td>
     </tr>
     <tr>
       <td>- 2 slices soft white bread</td>
