--- a/templates/game.html
+++ b/templates/game.html
@@ -8,6 +8,6 @@
 <body style="margin: 0; padding: 0;">
     
     <canvas id="canvas"></canvas>
-    <script src="/main.js"></script>
+    <script src="../static/main.js"></script>
 </body>
 </html>
