added the url for stuff to some of the links

--- a/templates/alfredo/chop.html
+++ b/templates/alfredo/chop.html
@@ -2,11 +2,13 @@
 <html>
 <head>
     <title> Byte Buffet: Chicken Alfredo </title>
-  <style>
-      body
-      canvas {
-          border: 2px solid red;
-      }
+<style>
+    body {
+      cursor: url("../../static/64cat.png"), auto;
+    }
+    canvas {
+      border: 2px solid red;
+    }
   </style>
 </head>
 
