--- a/templates/cheese/home.html
+++ b/templates/cheese/home.html
@@ -41,7 +41,7 @@
 
 <body>
 <body>
-    <a href="chop.html">
+    <a href="chop">
         <button class="block">
             Start Cooking!
         </button>
