--- a/templates/index.html
+++ b/templates/index.html
@@ -79,7 +79,7 @@
       <div class="row">
         <div class="col-md-12">
           <div class="button-container">
-            <a href="/recipe_select" class="btn btn-primary">Recipes</a>
+            <a href="./{{url_for('select')}}" class="btn btn-primary">Recipes</a>
           </div>
         </div>
       </div>
