--- a/templates/pancakes/home.html
+++ b/templates/pancakes/home.html
@@ -40,7 +40,7 @@
 </head>
 
 <body>
-    <a href="chop.html">
+    <a href="chop">
         <button class="block">
             Start Cooking!
         </button>
