--- a/templates/squid/home.html
+++ b/templates/squid/home.html
@@ -45,7 +45,7 @@
 </head>
 
 <body>
-    <a href="chop.html">
+    <a href="chop">
         <button class="block">
             Start Cooking!
         </button>
