made bare bones for serve page in pancakes

--- a/templates/alfredo/home.html
+++ b/templates/alfredo/home.html
@@ -67,8 +67,8 @@
     </table>
   </div>
 
-  <h3>Chicken Alfredo Fettucini Recipe</h3>
-  <table>
+  <h2 align="center">Chicken Alfredo Fettucini Recipe</h2>
+  <table align="center">
     <tr>
       <td><strong>Ingredients</strong></td>
       <td><strong>Instructions</strong></td>
