--- a/templates/beef/home.html
+++ b/templates/beef/home.html
@@ -67,8 +67,8 @@
     </table>
   </div>
 
-  <h3>Beef Stir Fry Veggies</h3>
-  <table>
+  <h2 align="center">Beef Stir Fry Veggies</h2>
+  <table align="center">
     <tr>
       <td><strong>Ingredients</strong></td>
       <td><strong>Instructions</strong></td>
