--- a/templates/cheese/home.html
+++ b/templates/cheese/home.html
@@ -68,8 +68,8 @@
     </table>
   </div>
 
-  <h3>Grilled Cheese Sandwich</h3>
-  <table>
+  <h2 align="center">Grilled Cheese Sandwich</h2>
+  <table align="center">
     <tr>
       <td><strong>Ingredients</strong></td>
       <td><strong>Instructions</strong></td>
