--- a/templates/beef/home.html
+++ b/templates/beef/home.html
@@ -1,71 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title> Byte Buffet: Beef Stir Fry </title>
-  <style>
-    body {
-      background-color: #8CC0DE;
-    }
-
-    td {
-      border: 1px solid #F4BFBF;
-      padding: 5px;
-    }
-
-    tr {
-      background-color: #FAF0D7;
-      color: black;
-    }
-
-    .block {
-      width: 25%;
-      border-radius: 25px;
-      background-color: #F4BFBF;
-      /* box-shadow: 5px 5px 5px lightblue; */
-      margin: 20px;
-      padding: 14px 28px;
-      font-size: 25px;
-      cursor: pointer;
-      text-align: center;
-    }
-    .block:hover{
-        background-color: #B2D3C2;
-        color: black;
-    }
-    .highscores {
-      float: right;
-      margin-right: 20px;
-    }
-  </style>
-</head>
-
-<body>
-    <a href="chop">
-        <button class="block">
-            Start Cooking!
-        </button>
-    </a>
-
-  <div class="highscores">
-    <h2 align="right"> Highscores: </h2>
-    <table>
-      <tr>
-        <td>1. NAME</td>
-      </tr>
-      <tr>
-        <td>2. NAME</td>
-      </tr>
-      <tr>
-        <td>3. NAME</td>
-      </tr>
-      <tr>
-        <td>4. NAME</td>
-      </tr>
-      <tr>
-        <td>5. NAME</td>
-      </tr>
-    </table>
-  </div>
+{% extends "layout.html" %}
+{% block content %}
 
   <h3>Beef Stir Fry Veggies</h3>
   <table>
@@ -127,5 +61,4 @@
     </tr>
   </table>
 
-</body>
-</html>
+{% endblock content %}
