I am adding routes

--- a/templates/chop_game.html
+++ b/templates/chop_game.html
@@ -8,6 +8,6 @@
 <body style="margin: 0; padding: 0;">
     
     <canvas id="canvas"></canvas>
-    <script src="chop.js"></script>
+    <script src="../static/chop.js"></script>
 </body>
 </html>
