--- a/templates/pan_game.html
+++ b/templates/pan_game.html
@@ -8,6 +8,6 @@
 <body style="margin: 0; padding: 0;">
     
     <canvas id="canvas"></canvas>
-    <script src="../static/stack.js"></script>
+    <script src="../static/pan.js"></script>
 </body>
 </html>
