--- a/templates/pancakes/serve.html
+++ b/templates/pancakes/serve.html
@@ -52,6 +52,10 @@
         font-size: 25px;
         cursor: pointer;
     }
+    .block:hover{
+        background-color: #B2D3C2;
+        color: black;
+    }
     .score {
         margin-top: 100px;
         text-align: center;
@@ -83,26 +87,17 @@
         </button>
     </a>
 
-  <div class="highscores">
-    <h2> Highscores: </h2>
-    <table>
-      <tr>
-        <td>1. NAME</td>
-      </tr>
-      <tr>
-        <td>2. NAME</td>
-      </tr>
-      <tr>
-        <td>3. NAME</td>
-      </tr>
-      <tr>
-        <td>4. NAME</td>
-      </tr>
-      <tr>
-        <td>5. NAME</td>
-      </tr>
-    </table>
-  </div>
+    <div class="highscores">
+      <h2 align="right"> Highscores: </h2>
+      <table>
+   		{% for i in rows %}
+            <tr>
+                <td> {{i[0]}} </td>
+                <td> {{i[1]}} </td>
+            </tr>
+            {% endfor %}
+          </table>
+    </div>
   <div class="score">
       <h1> Score: 8000 </h2>
       </div>
