cheese simple playthrough

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -41,7 +41,7 @@
 
 <body>
 <body>
-    <a href="chop">
+    <a href="/stack">
         <button class="block">
             Start Cooking!
         </button>
