--- a/templates/recipe_select.html
+++ b/templates/recipe_select.html
@@ -85,17 +85,17 @@
           <div class="level-container">
             <a href="./{{url_for('alfredo_home')}}" class="level">
               <h3>Chicken Alfredo</h3>
-             <img src="{{url_for('static', filename='chicken.png')}}" alt="Image Description" width="300" height="200"/>
+             <img src="{{url_for('static', filename='cooked_chickenalfredo.png')}}" alt="Image Description" width="300" height="200"/>
               <p>recipe desc</p>
             </a>
             <a href="./{{url_for('cheese_home')}}" class="level">
               <h3>Grilled Cheese</h3>
-              <img src="{{url_for('static', filename='cheese.png')}}" alt="Image Description" width="300" height="200">
+              <img src="{{url_for('static', filename='grilled_cheeseee.jpg')}}" alt="Image Description" width="300" height="200">
               <p>recipe desc</p>
             </a>
             <a href="./{{url_for('squid_home')}}" class="level">
               <h3>Fried Calamari</h3>
-              <img src="{{url_for('static', filename='Calamari.jpg')}}" alt="Image Description" width="300" height="200">
+              <img src="{{url_for('static', filename='cooked_calamari.png')}}" alt="Image Description" width="300" height="200">
               <p>recipe desc</p>
             </a>
           </div>
@@ -111,7 +111,7 @@
             </a>
             <a href="./{{url_for('beef_home')}}" class="level">
               <h3>Beef Stir Fry</h3>
-              <img src="{{url_for('static', filename='beef.png')}}" alt="Image Description" width="300" height="200">
+              <img src="{{url_for('static', filename='beef-vegetables-stir-fry.png')}}" alt="Image Description" width="300" height="200">
               <p>recipe desc</p>
             </a>
           </div>
