shortcut for Elizabeth

--- a/templates/pancakes/home.html
+++ b/templates/pancakes/home.html
@@ -48,5 +48,7 @@
       <td> - 1 cup maple syrup</td>
     </tr>
   </table>
-
+  <button align= "right">
+<a href = "serve"> serve </a>
+    </button>
 {% endblock content %}
