--- a/templates/pancakes/serve.html
+++ b/templates/pancakes/serve.html
@@ -154,7 +154,7 @@
                   obj.score = obj["Score"];
                   tr.appendChild(td1);
                   td1.appendChild(obj.name);
-                  // tr.appendChild(obj.score);
+                  tr.appendChild(obj.score);
                   document.querySelector("#best").appendChild(tr);
               }
           })
