--- a/templates/squid/home.html
+++ b/templates/squid/home.html
@@ -43,5 +43,7 @@
       <td>9. Season with kosher salt and serve with a spicy marinara sauce for dipping.</td>
     </tr>
   </table>
-
+  <button align= "right">
+<a href = "/pancakes/Serve" </a>
+    </button>
 {% endblock content %}
