--- a/templates/cheese/serve.html
+++ b/templates/cheese/serve.html
@@ -1,1 +1,176 @@
-cheese
+<!DOCTYPE html>
+<html>
+<head>
+    <title> Byte Buffet: Pancakes </title>
+  <style>
+    body {
+      background-color: #8CC0DE;
+    }
+
+    td {
+      border: 1px solid #F4BFBF;
+      padding: 5px;
+    }
+
+    tr {
+      background-color: #FAF0D7;
+      color: black;
+    }
+
+    .block:hover{
+        background-color: #B2D3C2;
+        color: black;
+    }
+    .highscores {
+      float: left;
+      margin-right: 20px;
+    }
+    .block-left {
+        position: fixed;
+        left: 10%;
+        bottom: 60px;
+        width: 25%;
+        border-radius: 25px;
+        background-color: #F4BFBF;
+        margin: 20px;
+        padding: 14px 28px;
+        font-size: 25px;
+        cursor: pointer;
+        text-align: center;
+
+    }
+    .block-right{
+        position: fixed;
+        left: 60%;
+        bottom: 60px;
+        width: 25%;
+        border-radius: 25px;
+        background-color: #F4BFBF;
+        /* box-shadow: 5px 5px 5px lightblue; */
+        margin: 20px;
+        padding: 14px 28px;
+        font-size: 25px;
+        cursor: pointer;
+    }
+    .block:hover{
+        background-color: #B2D3C2;
+        color: black;
+    }
+    .score {
+        margin-top: 100px;
+        text-align: center;
+    }
+    .plate {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .robot {
+        margin-top: 150px;
+        margin-right: 20px;
+        position: absolute;
+        top: 0;
+        right: 0;
+    }
+  </style>
+</head>
+
+<body>
+    <a href="../recipe_select">
+        <button class="block-left">
+            New Recipe
+        </button>
+    </a>
+    <a href="home">
+        <button class="block-right">
+            Retry
+        </button>
+    </a>
+
+    <div class="highscores">
+      <h2 align="right"> Highscores: </h2>
+      <table id="best">
+   		{% for i in rows %}
+            <tr>
+                <td> {{i[0]}} </td>
+                <td> {{i[1]}} </td>
+            </tr>
+            {% endfor %}
+          </table>
+    </div>
+  <div class="score">
+      <h1> Score: 8000 </h2>
+      </div>
+      <div class = "plate">
+          <img src="{{url_for('static', filename='pancake.png')}}" alt="Plate" width="300" height="200">
+        </div>
+    <div class = "robot">
+      <img src = "{{url_for('static', filename='happy_robot.png')}}" alt="Byter the Robot" width="300" height="200">
+      </div>
+
+<script>
+
+    window.addEventListener("DOMContentLoaded", (e) => {
+
+      console.log("DOM fully loaded and parsed");
+      setTimeout(function () {
+          function myFunction() {
+          let text;
+          let person = prompt("Please enter your name:", "MasterChef");
+          while (person == null) {
+              person = prompt("Please enter your name:", "MasterChef");
+          }
+          text = "Congratulations " + person + "!";
+          console.log(text);
+          let formData = new FormData();
+
+          // Grab content from form
+          let name = person
+
+          // Populate form
+          formData.append("name", name);
+
+          fetch("/pancakes/serve", {
+              method: "POST",
+              body: formData
+          })
+          .then(function(response) {
+        // This right here is the response we will receive before we convert
+        // it over to readable JSON
+              console.log("Response turning to readable JSON", response);
+              return response.json();
+          })
+          .then(function(response) {
+        // Don't worry if this says "false", it just returns that when the user already exists from flasks end
+        // Once it reaches here, the async is already successful
+              console.log("Successful async: ", JSON.stringify(response));
+              if (JSON.stringify(response) != "false") {
+                  let tr = document.createElement("tr");
+                  let td1 = document.createElement("td");
+                  // let td2 = document.createElement("td");
+                  let userText = document.createTextNode(JSON.stringify(response));
+                  let obj = JSON.parse(userText);
+                  obj.name = obj["Name"];
+                  obj.score = obj["Score"];
+                  tr.appendChild(td1);
+                  td1.appendChild(obj.name);
+                  tr.appendChild(obj.score);
+                  document.querySelector("#best").appendChild(tr);
+              }
+          })
+          .catch(function(error) {
+              console.log("Error in async", error);
+      });
+    };
+
+            myFunction()
+        }, 1000);
+
+    });
+
+
+    </script>
+
+</body>
+
+</html>
