actual shortcut to mix

--- a/templates/pancakes/home.html
+++ b/templates/pancakes/home.html
@@ -48,7 +48,10 @@
       <td> - 1 cup maple syrup</td>
     </tr>
   </table>
-  <button align= "right">
+  <button>
 <a href = "serve"> serve </a>
     </button>
+    <button>
+  <a href = "mix"> mix </a>
+      </button>
 {% endblock content %}
