more debug buttons

--- a/templates/beef/home.html
+++ b/templates/beef/home.html
@@ -60,5 +60,9 @@
       <td>- steamed white rice</td>
     </tr>
   </table>
-
+  <a href = "serve"> serve </a>
+      </button>
+      <button>
+    <a href = "mix"> mix </a>
+        </button>
 {% endblock content %}
