--- a/templates/alfredo/home.html
+++ b/templates/alfredo/home.html
@@ -54,5 +54,9 @@
       <td>- 1/4 cup Fresh parsley chopped</td>
     </tr>
   </table>
-
+  <a href = "serve"> serve </a>
+      </button>
+      <button>
+    <a href = "mix"> mix </a>
+        </button>
 {% endblock content %}
