--- a/templates/cheese/home.html
+++ b/templates/cheese/home.html
@@ -31,5 +31,9 @@
     </tr>
 
   </table>
-
+  <a href = "serve"> serve </a>
+      </button>
+      <button>
+    <a href = "mix"> mix </a>
+        </button>
 {% endblock content %}
