--- a/templates/pan_game.html
+++ b/templates/pan_game.html
@@ -1,13 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body style="margin: 0; padding: 0;">
-    
-    <canvas id="canvas"></canvas>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title> Byte Buffet! </title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Chela+One&family=Fasthand&display=swap"
+      rel="stylesheet"
+    />
+    <style>
+      body {
+        background-color: #8cc0de;
+      }
+      .title-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 240px;
+        background-color: #faf0d7;
+        border: 3px solid #4d4d4d;
+        border-radius: 15px;
+        margin-top: 50px;
+      }
+      .title-container h1 {
+        font-family: "Chela One", cursive;
+        font-size: 118px; /* Adjust the font size as needed */
+        color: #f4bfbf;
+        text-shadow: -2px -2px 0 #4d4d4d, 2px -2px 0 #4d4d4d, -2px 2px 0 #4d4d4d,
+          2px 2px 0 #4d4d4d;
+      }
+      .button-container {
+        display: flex;
+        justify-content: center;
+        margin-top: 20px;
+      }
+      .button-container .btn {
+        font-family: "Chela One", cursive;
+        font-size: 30px;
+        flex-basis: 30%;
+        color: #faf0d7;
+        text-shadow: -2px -2px 0 #4d4d4d, 2px -2px 0 #4d4d4d, -2px 2px 0 #4d4d4d,
+          2px 2px 0 #4d4d4d;
+        background-color: #f4bfbf;
+        border: 3px solid #4d4d4d;
+        border-radius: 10px;
+        padding: 10px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+      }
+      .button-container:hover {
+        color: #faf0d7;
+        text-shadow: -2px -2px 0 #4d4d4d, 2px -2px 0 #4d4d4d, -2px 2px 0 #4d4d4d,
+          2px 2px 0 #4d4d4d;
+        border-radius: 10px;
+        text-decoration: underline;
+      }
+      canvas {
+        background-color: aliceblue;
+        border: 10px solid #4d4d4d;
+        border-radius: 10px;
+      }
+
+    </style>
+
+  </head>
+  <body>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 offset-md-3">
+          <div class="title-container">
+            <h1 class="text-center">Cook It</h1>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <div class="button-container">
+                <canvas id="canvas"></canvas>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
     <script src="../static/pan.js"></script>
-</body>
+  </body>
 </html>
+
+
+
+<!-- <div class="container">
+    <canvas id="canvas"></canvas>
+</div> -->
