--- a/templates/pan_game.html
+++ b/templates/pan_game.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title> Byte Buffet! </title>
+    <title>Byte Buffet!</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -18,6 +18,9 @@
     />
     <style>
       body {
+        background-image: url("../static/background.png");
+        background-size: cover;
+        background-position: center;
         background-color: #8cc0de;
       }
       .title-container {
@@ -66,13 +69,14 @@
         text-decoration: underline;
       }
       canvas {
-        background-color: aliceblue;
+        background-image: url("../static/stove1.png");
+        background-size: cover;
+        background-position: center;
+        background-color: #3f434f;
         border: 10px solid #4d4d4d;
         border-radius: 10px;
       }
-
     </style>
-
   </head>
   <body>
     <div class="container">
@@ -86,7 +90,7 @@
       <div class="row">
         <div class="col-md-12">
           <div class="button-container">
-                <canvas id="canvas"></canvas>
+            <canvas id="canvas"></canvas>
           </div>
         </div>
       </div>
@@ -99,8 +103,6 @@
     <script src="../static/pan.js"></script>
   </body>
 </html>
-
-
 
 <!-- <div class="container">
     <canvas id="canvas"></canvas>
