--- a/templates/stack.html
+++ b/templates/stack.html
@@ -18,6 +18,9 @@
     />
     <style>
       body {
+        background-image: url("../static/background.png");
+        background-size: cover;
+        background-position: center;
         background-color: #8cc0de;
       }
       .title-container {
@@ -66,11 +69,10 @@
         text-decoration: underline;
       }
       canvas {
-        background-image: url("../static/background.png");
+        background-image: url("../static/cutting-board.png");
         background-size: cover;
         background-position: center;
-
-        background-color: aliceblue;
+        background-color: #3f434f;
         border: 10px solid #4d4d4d;
         border-radius: 10px;
       }
