--- a/templates/cheese/mix.html
+++ b/templates/cheese/mix.html
@@ -1,15 +1,15 @@
 {% extends "mix_template.html" %}
 {% block content %}
 <div class="circle-container">
-  <img src="{{url_for('static', filename='pancake.png')}}" alt="Mixing Bowl" class="center-image">
-  <img src="{{url_for('static', filename='flour.png')}}" alt="Correct 1" class="circle-image circle1" id="c1">
-  <img src="{{url_for('static', filename='sugar.png')}}" alt="Correct 2" class="circle-image circle2" id="c2">
-  <img src="{{url_for('static', filename='baking-powder.png')}}" alt="Correct 3" class="circle-image circle3" id="c3">
-  <img src="{{url_for('static', filename='salt.jpg')}}" alt="Correct 4" class="circle-image circle4" id="c4">
-  <img src="{{url_for('static', filename='pancake.png')}}" alt="Incorrect 5" class="circle-image circle5" id="i1">
-  <img src="{{url_for('static', filename='pancake.png')}}" alt="Incorrect 6" class="circle-image circle6" id="i2">
-  <img src="{{url_for('static', filename='pancake.png')}}" alt="Incorrect 7" class="circle-image circle7" id="i3">
-  <img src="{{url_for('static', filename='pancake.png')}}" alt="Incorrect 8" class="circle-image circle8" id="i4">
+  <img src="{{url_for('static', filename='mixing_bowl.jpg')}}" alt="Mixing Bowl" class="center-image">
+  <img src="{{url_for('static', filename='american.jpg')}}" alt="Correct 1" class="circle-image circle1" id="c1">
+  <img src="{{url_for('static', filename='butter.jpg')}}" alt="Correct 2" class="circle-image circle2" id="c2">
+  <img src="{{url_for('static', filename='bread.jpg')}}" alt="Correct 3" class="circle-image circle3" id="c3">
+  <img src="{{url_for('static', filename='pepperjack.jpg')}}" alt="Correct 4" class="circle-image circle4" id="c4">
+  <img src="{{url_for('static', filename='pasta.png')}}" alt="Incorrect 5" class="circle-image circle5" id="i1">
+  <img src="{{url_for('static', filename='yogurt.jpg')}}" alt="Incorrect 6" class="circle-image circle6" id="i2">
+  <img src="{{url_for('static', filename='flour.png')}}" alt="Incorrect 7" class="circle-image circle7" id="i3">
+  <img src="{{url_for('static', filename='strawberry.png')}}" alt="Incorrect 8" class="circle-image circle8" id="i4">
 </div>
 <script>
       // Get all the images with IDs starting with "c"
