--- a/templates/pancakes/mix.html
+++ b/templates/pancakes/mix.html
@@ -1,7 +1,7 @@
 {% extends "mix_template.html" %}
 {% block content %}
 <div class="circle-container">
-  <img src="{{url_for('static', filename='pancake.png')}}" alt="Mixing Bowl" class="center-image">
+  <img src="{{url_for('static', filename='mixing_bowl.jpg')}}" alt="Mixing Bowl" class="center-image">
   <img src="{{url_for('static', filename='flour.png')}}" alt="Correct 1" class="circle-image circle1" id="c1">
   <img src="{{url_for('static', filename='sugar.png')}}" alt="Correct 2" class="circle-image circle2" id="c2">
   <img src="{{url_for('static', filename='baking-powder.png')}}" alt="Correct 3" class="circle-image circle3" id="c3">
