did some set up stuff

--- a/templates/cheese/home.html
+++ b/templates/cheese/home.html
@@ -1,6 +1,10 @@
 {% extends "layout.html" %}
 {% block content %}
-
+<a href="/cheese/stack">
+    <button class="block">
+        Start Cooking!
+    </button>
+</a>
   <h2 align="center">Grilled Cheese Sandwich</h2>
   <table align="center">
     <tr>
