did some set up stuff

--- a/templates/pancakes/home.html
+++ b/templates/pancakes/home.html
@@ -1,5 +1,10 @@
 {% extends "layout.html" %}
 {% block content %}
+<a href="/pancakes/mix">
+    <button class="block">
+        Start Cooking!
+    </button>
+</a>
   <h2 align="center">Pancake Recipe</h2>
   <table align="center">
     <tr>
