--- a/templates/pancakes/mix.html
+++ b/templates/pancakes/mix.html
@@ -33,4 +33,9 @@
       };
       });
 </script>
+<a href="/cheese/stove">
+    <button class="block">
+        Start Cooking!
+    </button>
+</a>
 {% endblock content %}
