did some set up stuff

--- a/templates/pancakes/mix.html
+++ b/templates/pancakes/mix.html
@@ -35,7 +35,7 @@
 </script>
 <a href="/cheese/stove">
     <button class="block">
-        Start Cooking!
+        Stove Time!
     </button>
 </a>
 {% endblock content %}
