--- a/templates/beef/mix.html
+++ b/templates/beef/mix.html
@@ -1,9 +1,9 @@
 {% extends "mix_template.html" %}
 {% block content %}
 <div class="circle-container">
-  <img src="{{url_for('static', filename='pancake.png')}}" alt="Mixing Bowl" class="center-image">
-  <img src="{{url_for('static', filename='flour.png')}}" alt="Correct 1" class="circle-image circle1" id="c1">
-  <img src="{{url_for('static', filename='sugar.png')}}" alt="Correct 2" class="circle-image circle2" id="c2">
+  <img src="{{url_for('static', filename='mixing_bowl.jpg')}}" alt="Mixing Bowl" class="center-image">
+  <img src="{{url_for('static', filename='raw_beef.png')}}" alt="Correct 1" class="circle-image circle1" id="c1">
+  <img src="{{url_for('static', filename='onion.png')}}" alt="Correct 2" class="circle-image circle2" id="c2">
   <img src="{{url_for('static', filename='baking-powder.png')}}" alt="Correct 3" class="circle-image circle3" id="c3">
   <img src="{{url_for('static', filename='salt.jpg')}}" alt="Correct 4" class="circle-image circle4" id="c4">
   <img src="{{url_for('static', filename='pancake.png')}}" alt="Incorrect 5" class="circle-image circle5" id="i1">
