--- a/templates/pancake_pan.html
+++ b/templates/pancake_pan.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Byte Buffet!</title>
+    <title> Byte Buffet! </title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -18,9 +18,6 @@
     />
     <style>
       body {
-        background-image: url("../static/background.png");
-        background-size: cover;
-        background-position: center;
         background-color: #8cc0de;
       }
       .title-container {
@@ -68,14 +65,6 @@
         border-radius: 10px;
         text-decoration: underline;
       }
-      canvas {
-        background-image: url("../static/cutting-board.png");
-        background-size: cover;
-        background-position: center;
-        background-color: #3f434f;
-        border: 10px solid #4d4d4d;
-        border-radius: 10px;
-      }
     </style>
   </head>
   <body>
@@ -83,14 +72,14 @@
       <div class="row">
         <div class="col-md-6 offset-md-3">
           <div class="title-container">
-            <h1 class="text-center">Chop It</h1>
+            <h1 class="text-center">Byte Buffet</h1>
           </div>
         </div>
       </div>
       <div class="row">
         <div class="col-md-12">
           <div class="button-container">
-            <canvas id="canvas"></canvas>
+            <a href="./{{url_for('select')}}" class="btn btn-primary">Recipes</a>
           </div>
         </div>
       </div>
@@ -100,6 +89,5 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
-    <script src="../static/chop.js"></script>
   </body>
 </html>
