did some set up stuff

--- a/templates/pancakes/mix.html
+++ b/templates/pancakes/mix.html
@@ -33,7 +33,7 @@
       };
       });
 </script>
-<a href="/cheese/stove">
+<a href="/pancakes/stove">
     <button class="block">
         Stove Time!
     </button>
