added more mixing steps

--- a/templates/pancakes/mix.html
+++ b/templates/pancakes/mix.html
@@ -23,7 +23,7 @@
         image.src = "{{url_for('static', filename='greencheck2.png')}}";
         correct_num++;
         if (correct_num == 4) {
-        window.location.href = "/pancakes/pan"
+        window.location.href = "/pancakes/mix2"
       }
       };
       });
