added more mixing steps

--- a/templates/alfredo/chop.html
+++ b/templates/alfredo/chop.html
@@ -7,7 +7,7 @@
     cursor: url("../../static/64cat.png"), auto;
   }
     .custom-cursor.clicked {
-      cursor: url("../../static/64knife.png"), auto;
+      cursor: url("../../static/whisk.jpg"), auto;
     }
     canvas {
       border: 2px solid red;
