--- a/templates/mix_template.html
+++ b/templates/mix_template.html
@@ -10,7 +10,7 @@
       justify-content: center;
       height: 100vh;
       margin: 0;
-      background-color: #8CC0DE;
+      background-image: url("../static/background.png");
     }
 
     .circle-container {
