--- a/templates/pancake_stack.html
+++ b/templates/pancake_stack.html
@@ -69,7 +69,7 @@
         text-decoration: underline;
       }
       canvas {
-        background-image: url("../static/stove1.png");
+        background-image: url("../static/cutting-board.png");
         background-size: cover;
         background-position: center;
         background-color: #3f434f;
@@ -83,7 +83,7 @@
       <div class="row">
         <div class="col-md-6 offset-md-3">
           <div class="title-container">
-            <h1 class="text-center">Cook It</h1>
+            <h1 class="text-center">Stack It</h1>
           </div>
         </div>
       </div>
@@ -100,6 +100,10 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
-    <script src="../static/pancake_pan.js"></script>
+    <script src="../static/pancake_stack.js"></script>
   </body>
 </html>
+
+<!-- <div class="container">
+    <canvas id="canvas"></canvas>
+</div> -->
