added global score

--- a/templates/cheese/stack.html
+++ b/templates/cheese/stack.html
@@ -100,6 +100,8 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
+<script type="module"> import global_score from "../../static/tracking.js";
+console.log("GS: ", global_score); </script>
     <script src="../static/cheese_stack.js"></script>
   </body>
 </html>
