--- a/templates/pancakes/mix.html
+++ b/templates/pancakes/mix.html
@@ -5,7 +5,7 @@
   <img src="{{url_for('static', filename='flour.png')}}" alt="Correct 1" class="circle-image circle1" id="c1">
   <img src="{{url_for('static', filename='sugar.png')}}" alt="Correct 2" class="circle-image circle2" id="c2">
   <img src="{{url_for('static', filename='baking-powder.png')}}" alt="Correct 3" class="circle-image circle3" id="c3">
-  <img src="{{url_for('static', filename='egg.png')}}" alt="Correct 4" class="circle-image circle4" id="c4">
+  <img src="{{url_for('static', filename='salt.png')}}" alt="Correct 4" class="circle-image circle4" id="c4">
   <img src="{{url_for('static', filename='bread.jpg')}}" alt="Incorrect 5" class="circle-image circle5" id="i1">
   <img src="{{url_for('static', filename='garlic.png')}}" alt="Incorrect 6" class="circle-image circle6" id="i2">
   <img src="{{url_for('static', filename='onion.png')}}" alt="Incorrect 7" class="circle-image circle7" id="i3">
