--- a/templates/cheese/home.html
+++ b/templates/cheese/home.html
@@ -40,4 +40,12 @@
       <button>
     <a href = "mix"> mix </a>
         </button>
+        <audio id="gameMusic" controls autoplay hidden src="../../static/festival.mp3">
+        </audio>
+        <script>
+          window.addEventListener('load', function() {
+          var audio = document.getElementById('gameMusic');
+          audio.play();
+        });
+        </script>
 {% endblock content %}
