--- a/templates/recipe_select.html
+++ b/templates/recipe_select.html
@@ -118,6 +118,14 @@
         </div>
       </div>
     </div>
+    <audio id="gameMusic" controls autoplay hidden src="../../static/festival.mp3">
+    </audio>
+    <script>
+      window.addEventListener('load', function() {
+      var audio = document.getElementById('gameMusic');
+      audio.play();
+    });
+    </script>
   </body>
 </html>
 
