music audio more quite

--- a/templates/cheese/stack.html
+++ b/templates/cheese/stack.html
@@ -110,6 +110,7 @@ console.log("GS: ", global_score); </script>
     window.addEventListener('load', function() {
     var audio = document.getElementById('gameMusic');
     audio.play();
+    audio.volume = 0.10;
   });
   </script>
 </html>
