--- a/templates/pancakes/mix.html
+++ b/templates/pancakes/mix.html
@@ -18,6 +18,7 @@
       window.addEventListener('load', function() {
       var audio = document.getElementById('gameMusic');
       audio.play();
+      audio.volume = 0.10;
     });
       let correct_num = 0;
       // Get all the images with IDs starting with "c"
