--- a/templates/cheese/home.html
+++ b/templates/cheese/home.html
@@ -46,6 +46,7 @@
           window.addEventListener('load', function() {
           var audio = document.getElementById('gameMusic');
           audio.play();
+          audio.volume = 0.10;
         });
         </script>
 {% endblock content %}
