--- a/templates/cheese/serve.html
+++ b/templates/cheese/serve.html
@@ -113,6 +113,7 @@
       window.addEventListener('load', function() {
       var audio = document.getElementById('gameMusic');
       audio.play();
+      audio.volume = 0.10;
     });
     </script>
 
