--- a/templates/pancake_pan.html
+++ b/templates/pancake_pan.html
@@ -101,6 +101,7 @@
       window.addEventListener('load', function() {
       var audio = document.getElementById('gameMusic');
       audio.play();
+      audio.volume = 0.10;
     });
     </script>
     <script
