--- a/templates/pancakes/mix3.html
+++ b/templates/pancakes/mix3.html
@@ -49,6 +49,7 @@
   window.addEventListener('load', function() {
   var audio = document.getElementById('gameMusic');
   audio.play();
+  audio.volume = 0.10;
 });
 </script>
 {% endblock content %}
