--- a/templates/recipe_select.html
+++ b/templates/recipe_select.html
@@ -124,6 +124,7 @@
       window.addEventListener('load', function() {
       var audio = document.getElementById('gameMusic');
       audio.play();
+      audio.volume = 0.10;
     });
     </script>
   </body>
