--- a/templates/recipe_select.html
+++ b/templates/recipe_select.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title> Byte Buffet: Choose Recipe </title>
+    <title>Byte Buffet: Choose Recipe</title>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
@@ -85,17 +85,32 @@
           <div class="level-container">
             <a href="./{{url_for('alfredo_home')}}" class="level">
               <h3>Chicken Alfredo</h3>
-             <img src="{{url_for('static', filename='cooked_chickenalfredo.png')}}" alt="Image Description" width="300" height="200"/>
+              <img
+                src="{{url_for('static', filename='cooked_chickenalfredo.png')}}"
+                alt="Image Description"
+                width="300"
+                height="200"
+              />
               <p>recipe desc</p>
             </a>
             <a href="./{{url_for('cheese_home')}}" class="level">
               <h3>Grilled Cheese</h3>
-              <img src="{{url_for('static', filename='grilled_cheeseee.jpg')}}" alt="Image Description" width="300" height="200">
+              <img
+                src="{{url_for('static', filename='grilled_cheeseee.jpg')}}"
+                alt="Image Description"
+                width="300"
+                height="200"
+              />
               <p>recipe desc</p>
             </a>
             <a href="./{{url_for('squid_home')}}" class="level">
               <h3>Fried Calamari</h3>
-              <img src="{{url_for('static', filename='cooked_calamari.png')}}" alt="Image Description" width="300" height="200">
+              <img
+                src="{{url_for('static', filename='cooked_calamari.png')}}"
+                alt="Image Description"
+                width="300"
+                height="200"
+              />
               <p>recipe desc</p>
             </a>
           </div>
@@ -106,26 +121,57 @@
           <div class="level-container">
             <a href="./{{url_for('pancakes_home')}}" class="level">
               <h3>Pancakes</h3>
-              <img src="{{url_for('static', filename='pancake.png')}}" alt="Image Description" width="300" height="200">
+              <img
+                src="{{url_for('static', filename='pancake.png')}}"
+                alt="Image Description"
+                width="300"
+                height="200"
+              />
               <p>recipe desc</p>
             </a>
             <a href="./{{url_for('beef_home')}}" class="level">
               <h3>Beef Stir Fry</h3>
-              <img src="{{url_for('static', filename='beef-vegetables-stir-fry.png')}}" alt="Image Description" width="300" height="200">
+              <img
+                src="{{url_for('static', filename='beef-vegetables-stir-fry.png')}}"
+                alt="Image Description"
+                width="300"
+                height="200"
+              />
               <p>recipe desc</p>
             </a>
           </div>
         </div>
       </div>
     </div>
-    <audio id="gameMusic" controls autoplay hidden src="../../static/festival.mp3">
-    </audio>
+    <audio
+      id="gameMusic"
+      controls
+      autoplay
+      hidden
+      src="../../static/festival.mp3"
+    ></audio>
     <script>
-      window.addEventListener('load', function() {
-      var audio = document.getElementById('gameMusic');
-      audio.play();
-      audio.volume = 0.10;
-    });
+      window.addEventListener("load", function () {
+        const gameMusic = document.getElementById("gameMusic");
+        let playbackPosition = 0;
+
+        // Check if there is a stored playback position in local storage
+        if (localStorage.getItem("playbackPosition")) {
+          playbackPosition = parseFloat(
+            localStorage.getItem("playbackPosition")
+          );
+        }
+
+        // Set the playback position of the audio
+        gameMusic.currentTime = playbackPosition;
+
+        // Update the playback position in local storage whenever the audio time changes
+        gameMusic.addEventListener("timeupdate", function () {
+          playbackPosition = gameMusic.currentTime;
+          localStorage.setItem("playbackPosition", playbackPosition);
+        });
+        gameMusic.volume = 0.1;
+      });
     </script>
   </body>
 </html>
