got rid of debug buttons

--- a/templates/pancakes/home.html
+++ b/templates/pancakes/home.html
@@ -53,12 +53,12 @@
       <td> - 1 cup maple syrup</td>
     </tr>
   </table>
-  <button>
-<a href = "serve"> serve </a>
+  <!-- <button> -->
+<!-- <a href = "serve"> serve </a>
     </button>
     <button>
   <a href = "mix"> mix </a>
-      </button>
+      </button> -->
       <audio id="gameMusic" controls autoplay hidden src="../../static/festival.mp3">
       </audio>
       <script>
