--- a/templates/cheese/home.html
+++ b/templates/cheese/home.html
@@ -35,11 +35,11 @@
     </tr>
 
   </table>
-  <a href = "serve"> serve </a>
+  <!-- <a href = "serve"> serve </a>
       </button>
       <button>
     <a href = "mix"> mix </a>
-        </button>
+        </button> -->
         <audio id="gameMusic" controls autoplay hidden src="../../static/festival.mp3">
         </audio>
         <script>
