--- a/templates/pancakes/mix3.html
+++ b/templates/pancakes/mix3.html
@@ -63,11 +63,11 @@
       };
       });
 </script>
-<a href="/pancakes/stove">
+<!-- <a href="/pancakes/stove">
     <button class="block">
         Stove Time!
     </button>
-</a>
+</a> -->
 <audio id="gameMusic" controls autoplay hidden src="../../static/festival.mp3">
 </audio>
 <script>
